fixed spelling, spacing and formatting errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .results {
-  font-size: 20px;
+  font-size: 25px;
   line-height: 25px;
 }
 
